[package]
name = "domino"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["full"]

[build-dependencies]
tonic-build = "0.10"

[target.'cfg(windows)'.build-dependencies]
winres = { workspace = true }
